tests/ui/mut_mut.stderr
error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:10:12
   |
10 | fn fun(x : &mut &mut u32) -> bool {
   |            ^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/mut_mut.rs:5:9
   |
5  | #![deny(mut_mut)]
   |         ^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:24:17
   |
24 |     let mut x = &mut &mut 1u32;
   |                 ^^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:19:20
   |
19 |     ($p:expr) => { &mut $p }
   |                    ^^^^^^^
...
39 |     let mut z = mut_ptr!(&mut 3u32);
   |                 ------------------- in this macro invocation

error: this expression mutably borrows a mutable reference. Consider reborrowing
  --> $DIR/mut_mut.rs:26:21
   |
26 |         let mut y = &mut x;
   |                     ^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:30:17
   |
30 |         let y : &mut &mut u32 = &mut &mut 2;
   |                 ^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:30:33
   |
30 |         let y : &mut &mut u32 = &mut &mut 2;
   |                                 ^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:30:17
   |
30 |         let y : &mut &mut u32 = &mut &mut 2;
   |                 ^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:17
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                 ^^^^^^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:22
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                      ^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:38
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                                      ^^^^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:17
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                 ^^^^^^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:22
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                      ^^^^^^^^^^^^^

error: generally you want to avoid `&mut &mut _` if possible
  --> $DIR/mut_mut.rs:35:22
   |
35 |         let y : &mut &mut &mut u32 = &mut &mut &mut 2;
   |                      ^^^^^^^^^^^^^

error: aborting due to 13 previous errors

